--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
 				<span class="avatar"><a href="index.html"><img src="images/logo_simple.png" alt="" /></a></span>
 					<h1><strong>KING CYCLE</strong>, saving your time and money.<br />
 						For students, by students.</h1>
-					<ul class="icons">
-						<li><a href="bottles.html" class="icon style2"><img src="images/bottle_s.png" /></a></li>
-						<li><a href="mixers.html" class="icon style2"><img src="images/mixer_s.png" /></a></li>
-						<li><a href="acknowledge.html" class="icon style2"><img src="images/basket_s.png" /></a></li>
-						<li><a href="about_us.html" class="icon style2"><img src="images/aboutus_s.png" /></a></li>
-					</ul>
-					<ul class="icons2">
-						<li><a href="bottles.html" class=""><span style="margin-left:-100px;">Bottles</span></a></li>
-						<li><a href="mixers.html" class=""><span>&nbsp;&nbsp;&nbsp;&nbsp;Mixers</span></a></li>
-						<li><a href="acknowledge.html" class=""><span>&nbsp;&nbsp;&nbsp;&nbsp;Order now!</span></a></li>
-						<li><a href="about_us.html" class=""><span>&nbsp;&nbsp;About us</span></a></li>
-					</ul>
+					<h1><strong style="color:black;"><br />Opening soon...</strong></h1>
 			</header>
 					
 			<footer id="footer">
