--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
-	Visualize by TEMPLATED
+	=========================================================
+	= Edited and adaptated for KING CYCLE by Nicolas Bellec =
+	=========================================================
+	'Visualize' by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-		//
-	Edited and adaptated for KING CYCLE by Nicolas Bellec
+	===========================================================================================
 -->
 <html>
 	<head>
@@ -26,7 +28,7 @@
 						<li><a href="bottles.html" class="icon style2"><img src="images/bottle_s.png" /></a></li>
 						<li><a href="mixers.html" class="icon style2"><img src="images/mixer_s.png" /></a></li>
 						<li><a href="acknowledge.html" class="icon style2"><img src="images/basket_s.png" /></a></li>
-						<li><a href="about_us.html" class="icon style2"><img src="images/aboutus_s.png" /></a></li>
+						<li><a href="about_us.html" class="icon style2 abus"><img src="images/aboutus_s.png" /></a></li>
 					</ul>
 					<ul class="icons2">
 						<li><a href="bottles.html" class=""><span style="margin-left:-100px;">Bottles</span></a></li>
